# Minecraft-Rewrite

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Makefile  Minecraft rewrite.sln  NEWS  README.md  RECREATED_VER_RD131655  RECREATED_VER_RD132328  RECREATED_VER_RD20090515  REWRITE_VER_RD132211  REWRITE_VER_RD132328  REWRITE_VER_RD160052  TODO  readme.md
.github/workflows/: commit.yml  mkrelease.yml
Core/: Engine.vcxproj  Makefile  build.h
Core/App/: Application.cpp  Input.cpp
Core/Events/: Event.cpp
Core/Graphics/: Renderer.cpp
Core/Graphics/Buffers/: IndexBuffer.cpp  VertexBuffer.cpp  VertexLayout.cpp
Core/Graphics/Camera/: Camera.cpp  Frustum.cpp  Ray.cpp
Core/Graphics/Shader/: Shader.cpp
Core/Host/: console.cpp
Core/Host/Windows/: console.cpp  init.cpp
Core/Log/: Log.cpp
Core/Math/: Math.cpp
Core/Physics/: AABB.cpp
Core/Utils/: Timer.cpp  Util.cpp
Core/src/: mc.h
Core/src/MC/: common.h  types.h
Core/src/MC/App/: Application.cpp  Application.h  Input.cpp  Input.h  InputDefs.h  Window.cpp  Window.h
Core/src/MC/Events/: Event.cpp  Event.h
Core/src/MC/Graphics/: BlendValue.h  DepthValue.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Dependencies/: Makefile
Dependencies/GLAD/: GLAD.vcxproj  GLAD.vcxproj.filters
Dependencies/GLFW/: Makefile  gleq.h
Dependencies/gleq/: Makefile
Dependencies/glm/: Makefile
Dependencies/gzip/: compress.hpp  config.hpp
Dependencies/gzip-hpp/: Makefile
Dependencies/libgfx/: Makefile
Dependencies/stb/: Makefile
Dependencies/zlib/: Makefile  zlib.vcxproj
Documentation/: building-guide.md  contact-info.md  debugging-guide.md  directory-structure.md  installing-guide.md  running-mc.md  used-jar-files.txt
Documentation/changes/rd-132211-1/: relnotes.md
Documentation/game/: summary.md
Documentation/versions/rd-132211/: relnotes.md
Documentation/versions/rd-132211-1/: original-relnotes.md  relnotes.md
Engine/: Engine.filters  Engine.vcxproj  build.h  update_counter.bat
Engine/assets/: Thumbs.db
Engine/src/: Chunk.cpp  Chunk.h  ChunkDef.h  Hitresult.h  Level.cpp  Level.h  Player.cpp  Player.h  Rubydung.cpp  Rubydung.h  Selector.cpp  Selector.h  Tile.cpp  Tile.h  common.h  main.cpp
Engine/src/App/: Application.cpp  Application.h  Window.cpp  Window.h
Engine/src/Graphics/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Engine/src/Host/: console.h  init.h
Engine/src/Layer/: DefaultLayer.cpp
Engine/src/MC/: common.h
Engine/src/Physics/: AABB.cpp  AABB.h
Engine/src/Utils/: Timer.cpp  Timer.h  Timestep.h  Util.cpp  Util.h
Game/: Game.vcxproj  Game.vcxproj.filters
Game/assets/Shaders/: chunk.shader  selector.shader
Game/src/: Chunk.cpp  Level.cpp  Level.h  Player.cpp  Rubydung.cpp  Rubydung.h  Sandbox.cpp  Tile.cpp  Tile.h
Game/src/Block/: Tile.h
Game/src/Chunk/: Chunk.cpp  Chunk.h
Game/src/Level/: Level.cpp  Level.h
Game/src/Player/: Hitresult.h  Player.cpp  Player.h  Selector.cpp  Selector.h
assets/Shaders/: character.shader  chunk.shader  hud.shader  particle.shader  selector.shader
config/: command.mk  help_target.mk
core/: CMakeLists.txt
core/App/: Application.cpp  Input.cpp  Window.cpp
core/Graphics/: Image.cpp  Mesh.cpp  MeshFactory.cpp  Renderer.cpp  Renderer2D.cpp  Texture.cpp
core/Graphics/Buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp  VertexTraits.cpp
core/Graphics/Camera/: Camera.cpp  Frustum.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Ray.cpp
core/Graphics/GL/: GLContext.cpp  GLError.cpp
core/Graphics/Shader/: Shader.cpp  ShaderManager.cpp
core/Layers/: Default.cpp  Stack.cpp
core/Log/: Log.cpp
core/Physics/: AABB.cpp
core/Utils/: Error.cpp  Random.cpp  Timer.cpp  Util.cpp  gzip.cpp
dependencies/: CMakeLists.txt  Makefile
dependencies/GLFW/: Makefile
dependencies/gzip-hpp/: Makefile
dependencies/stb/: Makefile
dl/: CMakeLists.txt  dl.c  loader.c
game/: CMakeLists.txt  Game.cpp  Rubydung.cpp
game/Block/: Block.cpp  BlockManager.cpp  Tile.cpp
game/Block/Types/: Dirt.cpp  Grass.cpp  Rock.cpp  StoneBrick.cpp  Wood.cpp
game/Character/: Cube.cpp  Zombie.cpp  ZombieModel.cpp  ZombieRenderer.cpp
game/Chunk/: Chunk.cpp  ChunkManager.cpp
game/Entity/: Entity.cpp  EntityManager.cpp  EntityRenderer.cpp
game/Level/: Level.cpp  PerlinNoiseFilter.cpp
game/Particle/: Particle.cpp  ParticleEngine.cpp  ParticleModel.cpp  ParticleRenderer.cpp
game/Player/: Player.cpp  Selector.cpp
game/gui/: gui.cpp
include/: api.h  dl.h  errors.h  loader.h  mod.h  types.h
include/core/: common.h  core.h  types.h
include/core/App/: Application.h  Input.h  InputDefs.h  Window.h
include/core/Events/: Event.h
include/core/Graphics/: BlendValue.h  DepthValue.h  Image.h  Mesh.h  MeshFactory.h  Renderer.h  Renderer2D.h  Texture.h
include/core/Host/: console.h  exit.h  init.h
include/core/Layers/: Default.h  Layer.h  Stack.h
include/core/Log/: Log.h
include/core/Math/: Math.h
include/core/Physics/: AABB.h
include/core/Utils/: Error.h  Random.h  Timestep.h  Util.h  gzip.h
include/game/: GameProperties.h  Rubydung.h
include/game/Block/: Block.h  BlockManager.h  Tile.h
include/game/Character/: Cube.h  Zombie.h  ZombieModel.h  ZombieRenderer.h
include/game/Chunk/: Chunk.h  ChunkManager.h
include/game/Entity/: Entity.h  EntityManager.h  EntityRenderer.h
include/game/Level/: Level.h  PerlinNoiseFilter.h
include/game/Particle/: Particle.h  ParticleEngine.h  ParticleModel.h  ParticleRenderer.h
include/game/Player/: Player.h  Selector.h
include/game/gui/: gui.h
include/sandbox/: Rubydung.h
include/sandbox/Block/: Tile.h
include/sandbox/Chunk/: Chunk.h
include/sandbox/Player/: Player.h
lib/gfx/: CMakeLists.txt  glad.c
sandbox/: Makefile  Rubydung.cpp  Sandbox.cpp
sandbox/Block/: Tile.cpp
sandbox/Chunk/: Chunk.cpp
sandbox/Level/: Level.cpp
sandbox/Player/: Player.cpp
scripts/: auto-build.sh  auto-install.sh  clean-dependencies.sh  unistall-submodules.sh  windows-platform.mk
(+115 files in other folders)
